Fix live preview line in dark mode

--- a/resources/css/components/preview.css
+++ b/resources/css/components/preview.css
@@ -5,10 +5,8 @@
 .live-preview-header {
     @apply 
         relative flex h-13 items-center justify-between py-2 shadow-md ltr:pl-6 ltr:pr-4 rtl:pl-4 rtl:pr-6
-        bg-white dark:bg-dark-800
+        bg-white dark:bg-dark-800 border-b border-gray-300 dark:border-gray-700
     ;
-    
-    border-bottom: 1px solid #c4cdd6;
     z-index: 2;
 }
 
